# mimesbrunnr

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  main.py  pyproject.toml
.devcontainer/: Containerfile  devcontainer.json  initialize.sh
.devcontainer/.github/workflows/: ci.yml  release.yml
.github/instructions/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
docs/obsidian/: obsidian-index.py
docs/obsidian/meta/: agent-guidelines.md  workspace-index.md
docs/obsidian/projects/: _template.md
docs/obsidian/skills/: _template.md
src/mimesbrunnr/: __init__.py
src/mimesbrunnr/abstract/: __init__.py
src/mimesbrunnr/config/: __init__.py
src/mimesbrunnr/dataproduct/: __init__.py
src/mimesbrunnr/schema/: __init__.py
src/mimesbrunnr/stage/: __init__.py
tests/: test_main.py
