[project]
name = "mimesbrunnr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "enums>=0.0.2",
    "typing>=3.10.0.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.11",
]

[tool.ruff]
include = ["**/*.py"]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]   # pycodestyle, pyflakes, isort, pyupgrade
ignore = ["E501"]
fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["mimesbrunnr"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
line-ending = "auto"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/mimesbrunnr --cov-report=term-missing"
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/mimesbrunnr"]
omit = ["tests/*"]
